external-crates/move/crates/move-compiler/tests/move_check/expansion/friend_decl_inner_scope_alias.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E03002]: unbound module
  ┌─ tests/move_check/expansion/friend_decl_inner_scope_alias.move:7:12
  │
7 │     friend A;
  │            ^ Unbound module alias 'A'
